[package]
name = "itmsink"
version = "0.1.3"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
repository = "https://github.com/drone-os/itmsink"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
    "itm",
    "arm",
    "cortex",
    "swo",
    "uart",
]
categories = [
    "embedded",
    "command-line-utilities",
    "development-tools",
    "parsing",
    "encoding",
]
description = """
ITM protocol parser.
"""

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1"
env_logger = "0.7"
log = "0.4"
smallvec = "0.6"
structopt = "0.3"
